--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "frontend:build:production",
+            "firebaseProject": "daily-comms",
+            "firebaseHostingSite": "daily-comms"
+          }
         }
       }
     }
