--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,7 @@
   },
   "hosting": [
     {
+      "target": "daily-comms",
       "public": "projects/frontend/public",
       "ignore": [
         "firebase.json",
@@ -23,13 +24,6 @@
           "source": "**",
           "destination": "/index.html"
         }
-      ]
-    },
-    {
-      "target": "frontend",
-      "public": "dist/frontend",
-      "ignore": [
-        "**/.*"
       ],
       "headers": [
         {
@@ -49,12 +43,6 @@
               "value": "no-cache"
             }
           ]
-        }
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
         }
       ]
     }
