Playing around with target

--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
   },
   "hosting": [
     {
-      "target": "daily-comms",
+      "target": "frontend",
       "public": "projects/frontend/public",
       "ignore": [
         "firebase.json",
