--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "~13.3.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "autoprefixer": "^10.4.7",
     "firebase-tools": "^10.9.2",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
@@ -37,6 +38,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
     "typescript": "~4.5.2"
   }
 }
