--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.7",
-    "@angular/common": "~13.3.7",
-    "@angular/compiler": "~13.3.7",
-    "@angular/core": "~13.3.7",
+    "@angular/animations": "^14.0.0-rc.1",
+    "@angular/common": "^14.0.0-rc.1",
+    "@angular/compiler": "^14.0.0-rc.1",
+    "@angular/core": "^14.0.0-rc.1",
     "@angular/fire": "^7.3.0",
-    "@angular/forms": "~13.3.7",
-    "@angular/platform-browser": "~13.3.7",
-    "@angular/platform-browser-dynamic": "~13.3.7",
-    "@angular/router": "~13.3.7",
+    "@angular/forms": "^14.0.0-rc.1",
+    "@angular/platform-browser": "^14.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^14.0.0-rc.1",
+    "@angular/router": "^14.0.0-rc.1",
     "date-fns": "^2.28.0",
+    "firebase": "^9.8.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.5",
-    "@angular/cli": "~13.3.5",
-    "@angular/compiler-cli": "~13.3.7",
+    "@angular-devkit/build-angular": "^14.0.0-rc.1",
+    "@angular/cli": "^14.0.0-rc.1",
+    "@angular/compiler-cli": "^14.0.0-rc.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.7",
-    "firebase-tools": "^10.9.2",
+    "firebase-tools": "^11.0.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -39,6 +40,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "postcss": "^8.4.14",
-    "typescript": "~4.5.2"
+    "typescript": "~4.6.4"
   }
 }
