--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install
-      - run: npm run build
+      - run: yarn
+      - run: yarn run build
       - run: npx firebase-tools deploy --only hosting --token "$FIREBASE_TOKEN"  --non-interactive --project=daily-comms
         env:
           FIREBASE_TOKEN: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_DAILY_COMMS }}"
