--- a/firebase.json
+++ b/firebase.json
@@ -6,8 +6,7 @@
   "functions": {
     "source": "projects/functions",
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "yarn --cwd \"$RESOURCE_DIR\" run build"
     ]
   },
   "hosting": [
