--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0-rc.1",
-    "@angular/common": "^14.0.0-rc.1",
-    "@angular/compiler": "^14.0.0-rc.1",
-    "@angular/core": "^14.0.0-rc.1",
+    "@angular/animations": "^14.0.5",
+    "@angular/common": "^14.0.5",
+    "@angular/compiler": "^14.0.5",
+    "@angular/core": "^14.0.5",
     "@angular/fire": "^7.3.0",
-    "@angular/forms": "^14.0.0-rc.1",
-    "@angular/platform-browser": "^14.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^14.0.0-rc.1",
-    "@angular/router": "^14.0.0-rc.1",
+    "@angular/forms": "^14.0.5",
+    "@angular/platform-browser": "^14.0.5",
+    "@angular/platform-browser-dynamic": "^14.0.5",
+    "@angular/router": "^14.0.5",
     "date-fns": "^2.28.0",
     "firebase": "^9.8.1",
     "rxjs": "~7.5.0",
@@ -26,9 +26,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0-rc.1",
-    "@angular/cli": "^14.0.0-rc.1",
-    "@angular/compiler-cli": "^14.0.0-rc.1",
+    "@angular-devkit/build-angular": "^14.0.5",
+    "@angular/cli": "^14.0.5",
+    "@angular/compiler-cli": "^14.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.7",
